# apollo

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  backlog.md  benchmark_results.md  checklist.md  deny.toml  gap_audit.md  migrate.py  parse.py  parse_butterfly.py  parse_precision.py
crates/apollo-bench/: Cargo.toml
crates/apollo-bench/src/: case.rs  config.rs  lib.rs  suite.rs
crates/apollo-bench/src/comparison/: counterbalanced.rs  discovery.rs  error.rs  mod.rs  replicated.rs  report.rs
crates/apollo-bench/src/measurement/: calibration.rs  mod.rs  sample.rs
crates/apollo-bench/src/report/: mod.rs  text.rs
crates/apollo-bench/src/statistics/: median.rs  mod.rs
crates/apollo-bench/tests/: comparison.rs
crates/apollo-bench/tests/comparison/: support.rs
crates/apollo-czt/: Cargo.toml  README.md
crates/apollo-czt-wgpu/: Cargo.toml
crates/apollo-czt-wgpu/src/: verification.rs
crates/apollo-czt-wgpu/src/domain/: error.rs
crates/apollo-czt-wgpu/src/infrastructure/: device.rs  kernel.rs
crates/apollo-czt/src/: lib.rs
crates/apollo-dctdst/: Cargo.toml  README.md
crates/apollo-dctdst-wgpu/: Cargo.toml
crates/apollo-dctdst-wgpu/src/: verification.rs
crates/apollo-dctdst-wgpu/src/domain/: error.rs
crates/apollo-dctdst-wgpu/src/infrastructure/: device.rs  kernel.rs
crates/apollo-dctdst/proptest-regressions/verification/: mod.txt
crates/apollo-dctdst/src/: lib.rs
crates/apollo-dctdst/src/infrastructure/: mod.rs
crates/apollo-dctdst/src/verification/: direct_laws.rs  mod.rs  multidimensional.rs  one_dimensional.rs  properties.rs
crates/apollo-dht/: Cargo.toml  README.md
crates/apollo-dht-wgpu/: Cargo.toml
crates/apollo-dht-wgpu/src/: verification.rs
crates/apollo-dht-wgpu/src/domain/: error.rs
crates/apollo-dht-wgpu/src/infrastructure/: device.rs
crates/apollo-dht/src/: lib.rs
crates/apollo-dht/src/infrastructure/: mod.rs
crates/apollo-dht/src/verification/: mod.rs
crates/apollo-fft/: Cargo.toml  README.md
crates/apollo-fft-macros/: Cargo.toml
crates/apollo-fft-macros/src/: cooley_tukey.rs  good_thomas.rs  lib.rs  math.rs  prime_pair_tables.rs  prime_power_winograd.rs  rader.rs  shared_math.rs  shared_primitives.rs  two_by_prime.rs  winograd_composites.rs
crates/apollo-fft-wgpu/: Cargo.toml
crates/apollo-fft-wgpu/src/: lib.rs
crates/apollo-fft-wgpu/src/validation/: batched_matrix.rs
crates/apollo-fft/benches/: buffer_reuse.rs  half_cyclic_rader.rs  kernel_strategy.rs  prime_compose.rs  vs_rustfft.rs
crates/apollo-fft/examples/: composite_bench.rs
crates/apollo-fft/src/: coeus.rs  lib.rs  lib_tests.rs
crates/apollo-fft/src/api/: cfft.rs  icfft.rs  irfft.rs  mod.rs  rfft.rs  utils.rs
crates/apollo-fft/src/domain/: mod.rs
crates/apollo-fft/src/infrastructure/: mod.rs
crates/apollo-fft/src/lib_tests/: cfft_tests.rs  icfft_tests.rs  irfft_tests.rs  mod.rs  rfft_tests.rs
crates/apollo-fft/tests/: coeus_tests.rs  slice_api.rs
crates/apollo-frft/: Cargo.toml  README.md
crates/apollo-frft-wgpu/: Cargo.toml
crates/apollo-frft-wgpu/src/: verification.rs
crates/apollo-frft-wgpu/src/domain/: error.rs
crates/apollo-frft-wgpu/src/infrastructure/: device.rs  kernel.rs  unitary_kernel.rs
crates/apollo-frft/src/: lib.rs
crates/apollo-frft/src/infrastructure/: mod.rs
crates/apollo-fwht/: Cargo.toml  README.md
crates/apollo-fwht-wgpu/: Cargo.toml
crates/apollo-fwht-wgpu/src/: verification.rs
crates/apollo-fwht-wgpu/src/domain/: error.rs
crates/apollo-fwht-wgpu/src/infrastructure/: device.rs
crates/apollo-fwht/src/: lib.rs
crates/apollo-gft/: Cargo.toml  README.md
crates/apollo-gft-wgpu/: Cargo.toml
crates/apollo-gft-wgpu/src/: verification.rs
crates/apollo-gft-wgpu/src/domain/: error.rs
crates/apollo-gft-wgpu/src/infrastructure/: device.rs  kernel.rs
crates/apollo-gft/src/: lib.rs
crates/apollo-gft/src/infrastructure/: mod.rs
crates/apollo-gft/src/verification/: mod.rs
crates/apollo-ghostcell/: Cargo.toml
crates/apollo-ghostcell/src/: lib.rs
crates/apollo-hilbert/: Cargo.toml  README.md
crates/apollo-hilbert-wgpu/: Cargo.toml
crates/apollo-hilbert-wgpu/src/: verification.rs
crates/apollo-hilbert-wgpu/src/domain/: error.rs
crates/apollo-hilbert-wgpu/src/infrastructure/: device.rs  kernel.rs
crates/apollo-hilbert/src/: lib.rs
crates/apollo-hilbert/src/infrastructure/: mod.rs
crates/apollo-hilbert/src/verification/: mod.rs
crates/apollo-leto-interop/: Cargo.toml
crates/apollo-leto-interop/src/: lib.rs
crates/apollo-leto-interop/src/array/: dense.rs  mod.rs  vector.rs
crates/apollo-leto-interop/src/view/: cow.rs  mod.rs
crates/apollo-mellin/: Cargo.toml  README.md
crates/apollo-mellin-wgpu/: Cargo.toml
crates/apollo-mellin-wgpu/src/: verification.rs
crates/apollo-mellin-wgpu/src/domain/: error.rs
crates/apollo-mellin-wgpu/src/infrastructure/: device.rs
crates/apollo-mellin/src/: lib.rs
crates/apollo-mellin/src/infrastructure/: mod.rs
crates/apollo-mellin/src/verification/: mod.rs
crates/apollo-ntt/: Cargo.toml  README.md
crates/apollo-ntt-wgpu/: Cargo.toml
crates/apollo-ntt-wgpu/src/: verification.rs
crates/apollo-ntt-wgpu/src/domain/: error.rs
crates/apollo-ntt-wgpu/src/infrastructure/: device.rs  kernel.rs
crates/apollo-ntt/src/: lib.rs
crates/apollo-ntt/src/infrastructure/: mod.rs
crates/apollo-nufft/: Cargo.toml  README.md
crates/apollo-nufft-wgpu/: Cargo.toml
crates/apollo-nufft-wgpu/src/: verification.rs
crates/apollo-nufft-wgpu/src/infrastructure/: device.rs  kernel.rs
crates/apollo-nufft/benches/: buffer_reuse.rs
crates/apollo-nufft/src/: lib.rs
crates/apollo-nufft/src/infrastructure/: mod.rs
crates/apollo-nufft/src/verification/: adjoint.rs  direct_identity.rs  in_place_consistency.rs  kernel_width.rs  mod.rs  typed_storage_1d.rs  (+1 more)
crates/apollo-python/: Cargo.toml  README.md  pyproject.toml
crates/apollo-python/src/: lib.rs
crates/apollo-qft-wgpu/: Cargo.toml
crates/apollo-qft-wgpu/src/: verification.rs
xtask/: Cargo.toml
xtask/src/: main.rs  provider_audit.rs
(+863 files in other folders)
