[workspace]
members = [
    "crates/apollo-czt",
    "crates/apollo-czt-wgpu",
    "crates/apollo-dctdst",
    "crates/apollo-dctdst-wgpu",
    "crates/apollo-dht",
    "crates/apollo-dht-wgpu",
    "crates/apollo-fft",
    "crates/apollo-fft-macros",
    "crates/apollo-frft",
    "crates/apollo-frft-wgpu",
    "crates/apollo-fwht",
    "crates/apollo-fwht-wgpu",
    "crates/apollo-gft",
    "crates/apollo-gft-wgpu",
    "crates/apollo-hilbert",
    "crates/apollo-hilbert-wgpu",
    "crates/apollo-mellin",
    "crates/apollo-mellin-wgpu",
    "crates/apollo-ntt",
    "crates/apollo-ntt-wgpu",
    "crates/apollo-nufft",
    "crates/apollo-qft",
    "crates/apollo-qft-wgpu",
    "crates/apollo-radon",
    "crates/apollo-radon-wgpu",
    "crates/apollo-sdft",
    "crates/apollo-sdft-wgpu",
    "crates/apollo-sft",
    "crates/apollo-sft-wgpu",
    "crates/apollo-sht",
    "crates/apollo-sht-wgpu",
    "crates/apollo-stft",
    "crates/apollo-stft-wgpu",
    "crates/apollo-fft-wgpu",
    "crates/apollo-nufft-wgpu",
    "crates/apollo-wgpu-helpers",
    "crates/apollo-validation",
    "crates/apollo-wavelet",
    "crates/apollo-wavelet-wgpu",
    "crates/apollo-python",
    "xtask",
]
resolver = "2"

[profile.release]
# Single codegen unit: allows LLVM to inline num_complex::Complex64::mul and
# all internal helpers into one module, enabling autovectorization of the
# butterfly inner loop with AVX2/FMA across the full optimization scope.
codegen-units = 1
# Thin LTO: cross-crate inlining (e.g. num_complex, Moirai-dispatched closures) without
# the full compilation overhead of fat LTO.
lto = "thin"

[profile.bench-quick]
inherits = "release"
codegen-units = 16
incremental = false
lto = false

[profile.bench]
inherits = "release"
codegen-units = 8
lto = "thin"


[workspace.package]
version = "0.8.5"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
bytemuck = { version = "1.19", features = ["derive"] }
ndarray = { version = "0.16", default-features = false }
num-complex = { version = "0.4", features = ["bytemuck"] }
mnemosyne = { git = "https://github.com/ryancinsight/Mnemosyne.git", rev = "e0ffdf9aa0c571a90ec3961ae758ef2379347983", features = ["num-complex"] }
melinoe = { git = "https://github.com/ryancinsight/melinoe.git", rev = "cb4e371c38dac53a33bb72c726c98178a6430842", default-features = false, features = ["alloc"] }
hermes-simd = { git = "https://github.com/ryancinsight/hermes.git", rev = "25c261b3e990916729ed5ff613b7e41dfe051b0b", default-features = false, features = ["std"] }
leto = { git = "https://github.com/ryancinsight/leto.git", rev = "d8d34c617da453360931e50358e645743918962f", features = ["ndarray-compat"] }
leto-ops = { git = "https://github.com/ryancinsight/leto.git", rev = "d8d34c617da453360931e50358e645743918962f" }
# hephaestus: shared Atlas GPU substrate (atlas ADR 0001). apollo-wgpu-helpers
# delegates adapter/device acquisition here so the device layer is shared with
# coeus without an apollo->coeus edge.
hephaestus-wgpu = { git = "https://github.com/ryancinsight/hephaestus.git", rev = "8d4045f763006777edd2f243e6cf34e2ded235bb" }
proc-macro2 = "1.0"
numpy = "0.23"
once_cell = "1.19"
parking_lot = "0.12"
pollster = "0.4"
proptest = "1.6"
criterion = "0.5"
quote = "1.0"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
rand = "0.8"
# moirai: data-parallel runtime replacing direct scheduler usage.
moirai = { git = "https://github.com/ryancinsight/Moirai.git", rev = "4377b825bbbead62674acda1f3b8def52986309d", features = ["melinoe", "no-global-alloc"] }
rustfft = "6.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0"
wgpu = { version = "26.0", features = ["wgsl"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
default_constructed_unit_structs = "allow"
doc_lazy_continuation = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"
manual_is_multiple_of = "allow"
manual_div_ceil = "allow"
manual_slice_size_calculation = "allow"
len_zero = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
range_minus_one = "allow"
default_trait_access = "allow"
useless_conversion = "allow"
from_over_into = "allow"
cast_lossless = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
needless_pass_by_value = "allow"
needless_for_each = "allow"
redundant_closure_for_method_calls = "allow"
format_in_format_args = "allow"
match_like_matches_macro = "allow"
float_cmp = "allow"
unreadable_literal = "allow"
explicit_iter_loop = "allow"
unused_unit = "allow"
semicolon_if_nothing_returned = "allow"
pub_underscore_fields = "allow"
doc_markdown = "allow"
manual_is_power_of_two = "allow"
trivially_copy_pass_by_ref = "allow"
let_and_return = "allow"
match_same_arms = "allow"
single_match = "allow"
single_match_else = "allow"
redundant_field_names = "allow"
needless_return = "allow"
unneeded_field_pattern = "allow"
explicit_write = "allow"
manual_range_contains = "allow"
uninlined_format_args = "allow"

[patch."https://github.com/ryancinsight/Mnemosyne.git"]
mnemosyne = { path = "../mnemosyne/crates/mnemosyne" }
mnemosyne-core = { path = "../mnemosyne/crates/mnemosyne-core" }
mnemosyne-arena = { path = "../mnemosyne/crates/mnemosyne-arena" }
mnemosyne-local = { path = "../mnemosyne/crates/mnemosyne-local" }
mnemosyne-heap = { path = "../mnemosyne/crates/mnemosyne-heap" }

[patch."https://github.com/ryancinsight/Moirai.git"]
moirai = { path = "../moirai/moirai" }
moirai-core = { path = "../moirai/moirai-core" }
moirai-scheduler = { path = "../moirai/moirai-scheduler" }
moirai-parallel = { path = "../moirai/moirai-parallel" }

[patch."https://github.com/ryancinsight/leto.git"]
leto = { path = "../leto/crates/leto" }
leto-ops = { path = "../leto/crates/leto-ops" }

[patch."https://github.com/ryancinsight/hephaestus.git"]
hephaestus-wgpu = { path = "../hephaestus/crates/hephaestus-wgpu" }

[patch."https://github.com/ryancinsight/hermes.git"]
hermes-simd = { path = "../hermes/crates/hermes-simd" }

[patch."https://github.com/ryancinsight/melinoe.git"]
melinoe = { path = "../melinoe" }
