[workspace]
members = [
    "crates/apollo-czt",
    "crates/apollo-dctdst",
    "crates/apollo-dht",
    "crates/apollo-fft",
    "crates/apollo-fft-macros",
    "crates/apollo-frft",
    "crates/apollo-fwht",
    "crates/apollo-gft",
    "crates/apollo-hilbert",
    "crates/apollo-mellin",
    "crates/apollo-ntt",
    "crates/apollo-nufft",
    "crates/apollo-qft",
    "crates/apollo-radon",
    "crates/apollo-sdft",
    "crates/apollo-sft",
    "crates/apollo-sht",
    "crates/apollo-stft",
    "crates/apollo-wgpu-helpers",
    "crates/apollo-validation",
    "crates/apollo-wavelet",
    "crates/apollo-python",
    "xtask",
]
resolver = "3"

[profile.release]
# Single codegen unit: allows LLVM to inline num_complex::Complex64::mul and
# all internal helpers into one module, enabling autovectorization of the
# butterfly inner loop with AVX2/FMA across the full optimization scope.
codegen-units = 1
# Thin LTO: cross-crate inlining (e.g. num_complex, Moirai-dispatched closures) without
# the full compilation overhead of fat LTO.
lto = "thin"

[profile.bench-quick]
inherits = "release"
codegen-units = 16
incremental = false
lto = false

[profile.bench]
inherits = "release"
codegen-units = 8
lto = "thin"


[workspace.package]
version = "0.15.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/apollo"

[workspace.dependencies]
anyhow = "1.0.103"
approx = "0.5.1"
bytemuck = { version = "1.25.1", features = ["derive"] }
eunomia = { git = "https://github.com/ryancinsight/eunomia", rev = "dd94f7b9d223668887302531006628818e2bd45b", default-features = false, features = ["std"] }
mnemosyne = { git = "https://github.com/ryancinsight/Mnemosyne.git", rev = "4a9d2a32423f7c3f1413171193765d6aba34ad8e", features = ["eunomia"] }
melinoe = { git = "https://github.com/ryancinsight/melinoe.git", rev = "bb07447f6c71978c6fed47114ba9ecfda965ddc9", default-features = false, features = ["alloc"] }
hermes-simd = { git = "https://github.com/ryancinsight/hermes.git", rev = "51c530fa4fe5f0df5947b78c2bb1eb5d229d5d13" }
half = { version = "2.7.1", features = ["serde", "use-intrinsics"] }
leto = { git = "https://github.com/ryancinsight/leto.git", rev = "8651dfc18c25b9cec0ff96ad90c61c4fc2132be9" }
leto-ops = { git = "https://github.com/ryancinsight/leto.git", rev = "8651dfc18c25b9cec0ff96ad90c61c4fc2132be9" }
# hephaestus: shared Atlas GPU substrate (atlas ADR 0001). apollo-wgpu-helpers
# delegates adapter/device acquisition here so the device layer is shared with
# coeus without an apollo->coeus edge.
hephaestus-wgpu = { git = "https://github.com/ryancinsight/hephaestus.git", rev = "090611d207488d30dbf95c01f0489d6215714e7e" }
hephaestus-core = { git = "https://github.com/ryancinsight/hephaestus.git", rev = "090611d207488d30dbf95c01f0489d6215714e7e" }
proc-macro2 = "1.0.106"
once_cell = "1.21.4"
parking_lot = "0.12.5"
pollster = "1.0.1"
proptest = "1.11.0"
criterion = "0.8.2"
quote = "1.0.46"
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py38"] }
rand = "0.10.2"
# moirai: data-parallel runtime replacing direct scheduler usage.
moirai = { git = "https://github.com/ryancinsight/Moirai.git", rev = "c43f86a21e0ea73d8e3bba68d75db9cedae3abb3", features = ["melinoe"] }
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syn = { version = "2.0.118", features = ["full"] }
thiserror = "2.0.18"
# Hephaestus 0.13 owns Apollo's WGPU 30 device contract.
wgpu = { version = "30.0.0", features = ["wgsl"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
default_constructed_unit_structs = "allow"
doc_lazy_continuation = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"
manual_is_multiple_of = "allow"
manual_div_ceil = "allow"
manual_slice_size_calculation = "allow"
len_zero = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
range_minus_one = "allow"
default_trait_access = "allow"
useless_conversion = "allow"
from_over_into = "allow"
cast_lossless = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
needless_pass_by_value = "allow"
needless_for_each = "allow"
redundant_closure_for_method_calls = "allow"
format_in_format_args = "allow"
match_like_matches_macro = "allow"
float_cmp = "allow"
unreadable_literal = "allow"
explicit_iter_loop = "allow"
unused_unit = "allow"
semicolon_if_nothing_returned = "allow"
pub_underscore_fields = "allow"
doc_markdown = "allow"
manual_is_power_of_two = "allow"
trivially_copy_pass_by_ref = "allow"
let_and_return = "allow"
match_same_arms = "allow"
single_match = "allow"
single_match_else = "allow"
redundant_field_names = "allow"
needless_return = "allow"
unneeded_field_pattern = "allow"
explicit_write = "allow"
manual_range_contains = "allow"
uninlined_format_args = "allow"

[patch."https://github.com/ryancinsight/Mnemosyne.git"]
mnemosyne = { path = "../mnemosyne/crates/mnemosyne" }
mnemosyne-backend = { path = "../mnemosyne/crates/mnemosyne-backend" }
mnemosyne-core = { path = "../mnemosyne/crates/mnemosyne-core" }
mnemosyne-arena = { path = "../mnemosyne/crates/mnemosyne-arena" }
mnemosyne-local = { path = "../mnemosyne/crates/mnemosyne-local" }
mnemosyne-heap = { path = "../mnemosyne/crates/mnemosyne-heap" }

[patch."https://github.com/ryancinsight/Moirai.git"]
moirai = { path = "../moirai/moirai" }
moirai-core = { path = "../moirai/moirai-core" }
moirai-gpu = { path = "../moirai/moirai-gpu" }
moirai-scheduler = { path = "../moirai/moirai-scheduler" }
moirai-parallel = { path = "../moirai/moirai-parallel" }
moirai-sync = { path = "../moirai/moirai-sync" }
moirai-utils = { path = "../moirai/moirai-utils" }

[patch."https://github.com/ryancinsight/eunomia"]
eunomia = { path = "../eunomia/crates/eunomia" }

[patch."https://github.com/ryancinsight/leto.git"]
leto = { path = "../leto/crates/leto" }
leto-ops = { path = "../leto/crates/leto-ops" }

[patch."https://github.com/ryancinsight/hephaestus.git"]
hephaestus-core = { path = "../hephaestus/crates/hephaestus-core" }
hephaestus-wgpu = { path = "../hephaestus/crates/hephaestus-wgpu" }

[patch."https://github.com/ryancinsight/hermes.git"]
hermes-simd = { path = "../hermes/crates/hermes-simd" }

[patch."https://github.com/ryancinsight/melinoe.git"]
melinoe = { path = "../melinoe" }

[patch."https://github.com/ryancinsight/themis"]
themis = { path = "../themis" }
