[workspace]
members = [
    "crates/apollo-czt",
    "crates/apollo-dctdst",
    "crates/apollo-dht",
    "crates/apollo-fft",
    "crates/apollo-fft-macros",
    "crates/apollo-bench",
    "crates/apollo-frft",
    "crates/apollo-fwht",
    "crates/apollo-gft",
    "crates/apollo-hilbert",
    "crates/apollo-leto-interop",
    "crates/apollo-mellin",
    "crates/apollo-ntt",
    "crates/apollo-nufft",
    "crates/apollo-qft",
    "crates/apollo-radon",
    "crates/apollo-sdft",
    "crates/apollo-sft",
    "crates/apollo-sht",
    "crates/apollo-stft",
    "crates/apollo-validation",
    "crates/apollo-wavelet",
    "crates/apollo-python",
    "xtask",
]
resolver = "3"

[profile.release]
# Single codegen unit: allows LLVM to inline num_complex::Complex64::mul and
# all internal helpers into one module, enabling autovectorization of the
# butterfly inner loop with AVX2/FMA across the full optimization scope.
codegen-units = 1
# Thin LTO: cross-crate inlining (e.g. num_complex, Moirai-dispatched closures) without
# the full compilation overhead of fat LTO.
lto = "thin"

[profile.bench-quick]
inherits = "release"
codegen-units = 16
incremental = false
lto = false

[profile.bench]
inherits = "release"
codegen-units = 8
lto = "thin"


[workspace.package]
version = "0.16.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/apollo"

[workspace.dependencies]
anyhow = "1.0.103"
bytemuck = { version = "1.25.1", features = ["derive"] }
csv = "1.4.0"
eunomia = { git = "https://github.com/ryancinsight/eunomia", default-features = false, features = ["std"] }
mnemosyne = { git = "https://github.com/ryancinsight/Mnemosyne.git", features = ["eunomia"] }
melinoe = { git = "https://github.com/ryancinsight/melinoe.git", default-features = false, features = ["alloc"] }
hermes-simd = { git = "https://github.com/ryancinsight/hermes.git" }
half = { version = "2.7.1", features = ["serde", "use-intrinsics"] }
leto = { git = "https://github.com/ryancinsight/leto.git" }
leto-ops = { git = "https://github.com/ryancinsight/leto.git" }
# Hephaestus is Apollo's shared Atlas accelerator substrate (atlas ADR 0001).
# Transform crates depend on its typed device and kernel contracts directly.
hephaestus-wgpu = { git = "https://github.com/ryancinsight/hephaestus.git" }
hephaestus-core = { git = "https://github.com/ryancinsight/hephaestus.git" }
hephaestus-cuda = { git = "https://github.com/ryancinsight/hephaestus.git" }
proc-macro2 = "1.0.106"
once_cell = "1.21.4"
parking_lot = "0.12.5"
proptest = "1.11.0"
quote = "1.0.46"
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py38"] }
rand = "0.10.2"
# moirai: data-parallel runtime replacing direct scheduler usage.
moirai = { git = "https://github.com/ryancinsight/Moirai.git", features = ["melinoe"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syn = { version = "2.0.118", features = ["full"] }
thiserror = "2.0.18"
# Hephaestus 0.15 owns Apollo's WGPU 30 device contract.

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
default_constructed_unit_structs = "allow"
doc_lazy_continuation = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"
manual_is_multiple_of = "allow"
manual_div_ceil = "allow"
manual_slice_size_calculation = "allow"
len_zero = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
range_minus_one = "allow"
default_trait_access = "allow"
useless_conversion = "allow"
from_over_into = "allow"
cast_lossless = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
needless_pass_by_value = "allow"
needless_for_each = "allow"
redundant_closure_for_method_calls = "allow"
format_in_format_args = "allow"
match_like_matches_macro = "allow"
float_cmp = "allow"
unreadable_literal = "allow"
explicit_iter_loop = "allow"
unused_unit = "allow"
semicolon_if_nothing_returned = "allow"
pub_underscore_fields = "allow"
doc_markdown = "allow"
manual_is_power_of_two = "allow"
trivially_copy_pass_by_ref = "allow"
let_and_return = "allow"
match_same_arms = "allow"
single_match = "allow"
single_match_else = "allow"
redundant_field_names = "allow"
needless_return = "allow"
unneeded_field_pattern = "allow"
explicit_write = "allow"
manual_range_contains = "allow"
uninlined_format_args = "allow"
