[package]
name = "apollo-bench"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Apollo benchmark measurement runtime"
publish = false

[dependencies]
csv.workspace = true
thiserror.workspace = true

[lints]
workspace = true
