[package]
name = "apollo-czt-wgpu"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo CZT"


[features]
default = ["parallel", "mnemosyne-memory"]
parallel = ["apollo-fft/parallel", "apollo-czt/parallel"]
mnemosyne-memory = ["apollo-fft/mnemosyne-memory", "apollo-czt/mnemosyne-memory"]

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-czt = { path = "../apollo-czt" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
leto = { workspace = true }
num-complex = { workspace = true }
wgpu = { version = "26.0", features = ["wgsl"] }

[dev-dependencies]
ndarray = { workspace = true }

[lints]
workspace = true
