[package]
name = "apollo-czt"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Chirp z-transform utilities for Apollo"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
leto = { workspace = true }
ndarray = { workspace = true }
num-complex = { version = "0.4", features = ["serde"] }
mnemosyne = { workspace = true }
moirai = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true
