[package]
name = "apollo-czt"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Chirp z-transform utilities for Apollo"


[features]
wgpu = [
    "dep:apollo-wgpu-helpers",
    "dep:hephaestus-wgpu",
    "dep:wgpu",
    "dep:pollster"
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers", optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true }
apollo-fft = { path = "../apollo-fft" }
hermes-simd = { workspace = true }
leto = { workspace = true }
eunomia = { workspace = true, features = ["serde"] }
mnemosyne = { workspace = true }
moirai = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true

[lints]
workspace = true

