[package]
name = "apollo-czt"
version = "0.8.0"
rust-version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Chirp z-transform utilities for Apollo"


[features]
wgpu = [
    "dep:hephaestus-core",
    "dep:hephaestus-wgpu",
]

[dependencies]
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true }
apollo-fft = { path = "../apollo-fft" }
apollo-leto-interop = { path = "../apollo-leto-interop" }
hermes-simd = { workspace = true }
leto = { workspace = true }
eunomia = { workspace = true, features = ["serde"] }
mnemosyne = { workspace = true }
moirai = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true

[lints]
workspace = true

