[package]
name = "apollo-dctdst-wgpu"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo DCT/DST"


[features]
default = ["parallel", "mnemosyne-memory"]
parallel = ["apollo-fft/parallel", "apollo-dctdst/parallel"]
mnemosyne-memory = ["apollo-fft/mnemosyne-memory", "apollo-dctdst/mnemosyne-memory"]

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-dctdst = { path = "../apollo-dctdst" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
leto = { workspace = true }
ndarray = { workspace = true }
wgpu = { version = "26.0", features = ["wgsl"] }

[lints]
workspace = true
