[package]
name = "apollo-dctdst"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "DCT and DST real-to-real transform plans for Apollo"


[features]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
hermes-simd = { workspace = true }
moirai = { workspace = true }
mnemosyne = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
apollo-fft = { path = "../apollo-fft" }
leto = { workspace = true }
ndarray = { workspace = true }
num-complex = { workspace = true }

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true
