[package]
name = "apollo-dctdst"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository.workspace = true
description = "DCT and DST real-to-real transform plans for Apollo"


[features]
wgpu = [
    "dep:hephaestus-core",
    "dep:hephaestus-wgpu",
    "dep:bytemuck"
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
hermes-simd = { workspace = true }
moirai = { workspace = true }
mnemosyne = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
apollo-fft = { path = "../apollo-fft" }
apollo-leto-interop = { path = "../apollo-leto-interop" }
leto = { workspace = true }
eunomia = { workspace = true, features = ["serde"] }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true

[lints]
workspace = true
