[package]
name = "apollo-dht-wgpu"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo DHT"


[features]
default = ["parallel", "mnemosyne-memory"]
parallel = ["apollo-fft/parallel", "apollo-dht/parallel"]
mnemosyne-memory = ["apollo-fft/mnemosyne-memory", "apollo-dht/mnemosyne-memory"]

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-dht = { path = "../apollo-dht" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
leto = { workspace = true }
wgpu = { version = "26.0", features = ["wgsl"] }

[dev-dependencies]
ndarray = { workspace = true }

[lints]
workspace = true
