[package]
name = "apollo-dht"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Discrete Hartley Transform plans for real-to-real Apollo signal analysis"


[features]
wgpu = [
    "dep:apollo-wgpu-helpers",
    "dep:hephaestus-wgpu",
    "dep:wgpu",
    "dep:pollster",
    "dep:bytemuck"
]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers", optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
hermes-simd = { workspace = true }
moirai = { workspace = true }
mnemosyne = { workspace = true }
thiserror = "1.0"
apollo-fft = { path = "../apollo-fft" }
leto = { workspace = true }
eunomia = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true

