[package]
name = "apollo-dht"
version = "0.10.0"
rust-version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Discrete Hartley Transform plans for real-to-real Apollo signal analysis"


[features]
wgpu = [
    "dep:hephaestus-core",
    "dep:hephaestus-wgpu",
    "dep:bytemuck"
]
default = []

[dependencies]
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
hermes-simd = { workspace = true }
moirai = { workspace = true }
mnemosyne = { workspace = true }
thiserror = { workspace = true }
apollo-fft = { path = "../apollo-fft" }
apollo-leto-interop = { path = "../apollo-leto-interop" }
leto = { workspace = true }
eunomia = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true

[lints]
workspace = true

