[package]
name = "apollo-fft-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Proc macros for generated Apollo FFT routing kernels"
publish = false

[features]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
