[package]
name = "apollo-fft"
version = "0.14.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Reusable FFT planning, execution, and cache abstractions for Apollo"

[dependencies]
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers", optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true }
apollo-fft-macros = { path = "../apollo-fft-macros" }
half = { version = "2.4", features = ["serde", "use-intrinsics"] }
hermes-simd = { workspace = true }
leto = { workspace = true }
eunomia = { workspace = true }
ndarray = { workspace = true }
once_cell = "1.19"
parking_lot = "0.12"
rand = { workspace = true }
moirai = { workspace = true }
mnemosyne = { workspace = true }
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
criterion = { workspace = true }
proptest = "1.6"
rustfft = { workspace = true }

[features]
wgpu = [
    "dep:apollo-wgpu-helpers",
    "dep:hephaestus-wgpu",
    "dep:wgpu",
    "dep:pollster"
]
native-f16 = ["wgpu"]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []
kernel-strategy-bench = []
cache-profiling = []

[[bench]]
name = "kernel_strategy"
harness = false

[[bench]]
name = "vs_rustfft"
harness = false

[[bench]]
name = "prime_compose"
harness = false

[[bench]]
name = "half_cyclic_rader"
harness = false

[lints]
workspace = true

[[bench]]
name = "buffer_reuse"
harness = false
required-features = ["wgpu"]
