[package]
name = "apollo-fft"
version = "0.17.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository.workspace = true
description = "Reusable FFT planning, execution, and cache abstractions for Apollo"

[dependencies]
hephaestus-wgpu = { workspace = true, optional = true }
hephaestus-core = { workspace = true, optional = true }
bytemuck = { workspace = true }
apollo-fft-macros = { path = "../apollo-fft-macros" }
apollo-leto-interop = { path = "../apollo-leto-interop" }
half = { workspace = true }
hermes-simd = { workspace = true }
leto = { workspace = true }
eunomia = { workspace = true }
once_cell.workspace = true
parking_lot.workspace = true
rand = { workspace = true }
moirai = { workspace = true }
mnemosyne = { workspace = true }
rustc-hash = "2.0"
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx.workspace = true
apollo-bench = { path = "../apollo-bench" }
proptest.workspace = true
[features]
wgpu = [
    "dep:hephaestus-wgpu",
    "dep:hephaestus-core",
]
native-f16 = ["wgpu"]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []
kernel-strategy-bench = []
cache-profiling = []

[[bench]]
name = "kernel_strategy"
harness = false

[[bench]]
name = "prime_compose"
harness = false

[[bench]]
name = "half_cyclic_rader"
harness = false

[lints]
workspace = true

[[bench]]
name = "buffer_reuse"
harness = false
required-features = ["wgpu"]
