[package]
name = "apollo-frft-wgpu"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "WGPU backend boundary for Apollo FrFT"

[dependencies]
apollo-fft = { path = "../apollo-fft" }
apollo-frft = { path = "../apollo-frft" }
apollo-wgpu-helpers = { path = "../apollo-wgpu-helpers" }
bytemuck = { version = "1.19", features = ["derive"] }
leto = { workspace = true }
num-complex = { workspace = true }
wgpu = { version = "26.0", features = ["wgsl"] }

[dev-dependencies]
ndarray = { workspace = true }

[lints]
workspace = true
