[package]
name = "apollo-frft"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/kwavers"
description = "Fractional Fourier transform utilities for Apollo"


[features]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []

[dependencies]
apollo-fft = { path = "../apollo-fft" }
hermes-simd = { workspace = true }
leto = { workspace = true }
leto-ops = { workspace = true }
ndarray = { workspace = true }
num-complex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
mnemosyne = { workspace = true }
moirai = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
proptest = "1.6"

[lints]
workspace = true
